--- a/tijdreeksplot/templates/tijdreeksplot/location_list.html
+++ b/tijdreeksplot/templates/tijdreeksplot/location_list.html
@@ -1,10 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
 <h1>Tijdreeksplot</h1>
-<p>{{ locations }}</p>
 <ul>
 {% for location in locations %}
-	<li>{{ location }}</li>
+	<li><a href="{{ location.get_absolute_url }}">{{ location }}</a></li>
 {% endfor %}
 </ul>
 {% endblock %}
