added back button

--- a/tijdreeksplot/templates/tijdreeksplot/location_detail.html
+++ b/tijdreeksplot/templates/tijdreeksplot/location_detail.html
@@ -7,4 +7,7 @@
 	<li><a href="{{ record_value.get_absolute_url }}">{{ record_value }}</a></li>
 {% endfor %}
 </ul>
+
+<a href="{% url 'location-list' %}">Terug </a>
+
 {% endblock %}
