--- a/tijdreeksplot/templates/tijdreeksplot/recordvaluelist_detail.html
+++ b/tijdreeksplot/templates/tijdreeksplot/recordvaluelist_detail.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block htmlheader %}
+<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+{% endblock %}
+
 {% block content %}
 <h1>{{ object }}</h1>
 <ul>
