--- a/tijdreeksplot/templates/tijdreeksplot/location_list.html
+++ b/tijdreeksplot/templates/tijdreeksplot/location_list.html
@@ -1,5 +1,12 @@
 {% extends "base.html" %}
+
+
 {% block content %}
+
+{% load staticfiles %}
+
+<img src="{% static "tijdreeksplot/lg_hkv.gif" %}" alt="My logo"/>
+
 <h1>Tijdreeksplot</h1>
 <ul>
 {% for location in locations %}
