--- a/training/templates/base.html
+++ b/training/templates/base.html
@@ -21,7 +21,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="#">HKV Lijn in Water</a>
+    <a class="navbar-brand" href="#"><img height="25" src="{% static "tijdreeksplot/lg_hkv.gif" %}" alt="HKV Lijn in Water"/></a>
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
