--- a/training/templates/tijdreeksplot/recordvaluelist_detail.html
+++ b/training/templates/tijdreeksplot/recordvaluelist_detail.html
@@ -2,33 +2,20 @@
 
 {% block htmlheader %}
 <style>
-	/* tell the SVG path to be a thin blue line without any area fill */
-	path {
-		stroke: steelblue;
-		stroke-width: 1;
-		fill: none;
-	}
+    body {
+      font: 10px sans-serif;
+    }
 
-	.axis {
-	  shape-rendering: crispEdges;
-	}
+    .axis path,
+    .axis line {
+      fill: none;
+      stroke: #000;
+      shape-rendering: crispEdges;
+    }
 
-	.x.axis line {
-	  stroke: lightgrey;
-	}
-
-	.x.axis .minor {
-	  stroke-opacity: .5;
-	}
-
-	.x.axis path {
-	  display: none;
-	}
-
-	.y.axis line, .y.axis path {
-	  fill: none;
-	  stroke: #000;
-	}
+    .area {
+      fill: steelblue;
+    }
 </style>
 
 <script src="http://d3js.org/d3.v3.js" charset="utf-8"></script>
