CSS from D3.js v3 example.
http://bl.ocks.org/mbostock/3883245

--- a/training/templates/tijdreeksplot/recordvaluelist_detail.html
+++ b/training/templates/tijdreeksplot/recordvaluelist_detail.html
@@ -13,8 +13,14 @@
       shape-rendering: crispEdges;
     }
 
-    .area {
-      fill: steelblue;
+    .x.axis path {
+      display: none;
+    }
+
+    .line {
+      fill: none;
+      stroke: steelblue;
+      stroke-width: 1.5px;
     }
 </style>
 
