--- a/training/templates/tijdreeksplot/recordvaluelist_detail.html
+++ b/training/templates/tijdreeksplot/recordvaluelist_detail.html
@@ -96,7 +96,7 @@ graph.append("svg:g")
 
 // Add the line by appending an svg:path element with the data line we created above
 // do this AFTER the axes above so that the line is above the tick-lines
-graph.append("svg:path").attr("d", line(data));
+graph.append("svg:path").attr("d", line(data)).attr("class", "line");
 
 </script>
 
